--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/node": "^14.0.14",
+    "@types/node": "^15.12.2",
     "@types/ws": "^7.2.5",
     "discord.js": "^12.2.0",
-    "tsc": "^1.20150623.0",
-    "typescript": "^3.9.5"
+    "tsc": "^2.0.3",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "run": "tsc --build tsconfig.json && node",
@@ -20,6 +20,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2"
+    "ts-node": "^10.0.0"
   }
 }
